--- a/game_loop_only.ipynb
+++ b/game_loop_only.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "4       4206.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "value_no_doubles = (value_set.loc[(value_set['double']!=True)])"
+    "value_no_doubles = (value_set.loc[(value_set['double']!=True)])\n",
+    "# value_no_doubles = (value_no_doubles.loc[(value_no_doubles['solution']==True)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -313,6 +314,16 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>12966</th>\n",
+       "      <td>12966</td>\n",
+       "      <td>zurfs</td>\n",
+       "      <td>2305.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2402.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>12968</th>\n",
        "      <td>12968</td>\n",
        "      <td>zygal</td>\n",
@@ -352,52 +363,42 @@
        "      <td>NaN</td>\n",
        "      <td>1983.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>double</th>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8323 rows × 7 columns</p>\n",
+       "<p>8322 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0  guess  score_match  score_exact_match solution double  \\\n",
-       "26              26  abers       4061.0              133.0      NaN    NaN   \n",
-       "27              27  abets       3891.0              125.0      NaN    NaN   \n",
-       "28              28  abhor       3302.0              101.0     True    NaN   \n",
-       "29              29  abide       3557.0              215.0     True    NaN   \n",
-       "30              30  abies       3833.0              159.0      NaN    NaN   \n",
-       "...            ...    ...          ...                ...      ...    ...   \n",
-       "12968        12968  zygal       2474.0              103.0      NaN    NaN   \n",
-       "12969        12969  zygon       2105.0               69.0      NaN    NaN   \n",
-       "12970        12970  zymes       2683.0               62.0      NaN    NaN   \n",
-       "12971        12971  zymic       1929.0               54.0      NaN    NaN   \n",
-       "double           0  False          0.0                0.0    False  False   \n",
+       "       Unnamed: 0  guess  score_match  score_exact_match solution double  \\\n",
+       "26             26  abers       4061.0              133.0      NaN    NaN   \n",
+       "27             27  abets       3891.0              125.0      NaN    NaN   \n",
+       "28             28  abhor       3302.0              101.0     True    NaN   \n",
+       "29             29  abide       3557.0              215.0     True    NaN   \n",
+       "30             30  abies       3833.0              159.0      NaN    NaN   \n",
+       "...           ...    ...          ...                ...      ...    ...   \n",
+       "12966       12966  zurfs       2305.0               97.0      NaN    NaN   \n",
+       "12968       12968  zygal       2474.0              103.0      NaN    NaN   \n",
+       "12969       12969  zygon       2105.0               69.0      NaN    NaN   \n",
+       "12970       12970  zymes       2683.0               62.0      NaN    NaN   \n",
+       "12971       12971  zymic       1929.0               54.0      NaN    NaN   \n",
        "\n",
-       "        total_score  \n",
-       "26           4194.0  \n",
-       "27           4016.0  \n",
-       "28           3403.0  \n",
-       "29           3772.0  \n",
-       "30           3992.0  \n",
-       "...             ...  \n",
-       "12968        2577.0  \n",
-       "12969        2174.0  \n",
-       "12970        2745.0  \n",
-       "12971        1983.0  \n",
-       "double          0.0  \n",
+       "       total_score  \n",
+       "26          4194.0  \n",
+       "27          4016.0  \n",
+       "28          3403.0  \n",
+       "29          3772.0  \n",
+       "30          3992.0  \n",
+       "...            ...  \n",
+       "12966       2402.0  \n",
+       "12968       2577.0  \n",
+       "12969       2174.0  \n",
+       "12970       2745.0  \n",
+       "12971       1983.0  \n",
        "\n",
-       "[8323 rows x 7 columns]"
+       "[8322 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +551,7 @@
        "4  abaca       3695.0              511.0      NaN   True       4206.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,9 +571,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strongest start suggestion\n",
+      "resee\n",
+      "5923.0\n"
+     ]
+    }
+   ],
    "source": [
     "print('strongest start suggestion')\n",
     "print (df_ranks['guess'][df_ranks['total_score'].idxmax()])\n",
@@ -581,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,15 +657,14 @@
     "\n",
     "def remove_by_location(loc,letter,df):\n",
     "    df_sub = df\n",
-    "    loc = loc-1 # for easier use 0 is positon 1\n",
+    "    loc = loc # for easier use 0 is positon 1\n",
     "    for l in letter:\n",
     "        df_sub = (df_sub.loc[(df_sub['guess'].str[loc]==l)])\n",
     "    return df_sub\n",
     "\n",
-    "# confirm letter not in location!\n",
     "def remove_by_not_location(loc,letter,df):\n",
     "    df_sub = df\n",
-    "    loc = loc-1 # for easier use 0 is positon 1\n",
+    "    loc = loc # for easier use 0 is positon 1\n",
     "    for l in letter:\n",
     "        df_sub = (df_sub.loc[(df_sub['guess'].str[loc]!=l)])\n",
     "    return df_sub\n",
@@ -667,15 +677,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_ranks = df_ranks.loc[(df_ranks['solution']==True)]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -684,39 +685,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate loop\n"
+    "df = value_no_doubles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_result = {'i0': ['present', '0'],\n",
+    " 'n1': ['absent', '1'],\n",
+    " 'l2': ['present', '2'],\n",
+    " 'e3': ['absent', '3'],\n",
+    " 't4': ['correct', '4']}\n",
+    "\n",
+    "# result = example_result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_result_1 = {'l0': ['correct', '0'],\n",
+    " 'i1': ['correct', '1'],\n",
+    " 'a2': ['absent', '2'],\n",
+    " 'r3': ['absent', '3'],\n",
+    " 't4': ['correct', '4']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_result_2 = {'l0': ['correct', '0'],\n",
+    " 'i1': ['correct', '1'],\n",
+    " 'c2': ['absent', '2'],\n",
+    " 'h3': ['correct', '3'],\n",
+    " 't4': ['correct', '4']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate loop\n",
+    "def next_guess(result, df):\n",
+    "    for v in result:\n",
+    "        letter = v[0] \n",
+    "        status = result[v][0]\n",
+    "        placement = int(result[v][1])\n",
+    "        if status == 'correct':\n",
+    "            print('correct')\n",
+    "            df = remove_by_contains(letter,df)\n",
+    "            df = remove_by_location(placement,letter,df)\n",
+    "        elif status == 'present':\n",
+    "            print('present')\n",
+    "            df = remove_by_contains(letter,df)\n",
+    "        elif status == 'absent':\n",
+    "            print('absent')\n",
+    "            df = remove_notcontains(letter,df)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "strongest start suggestion\n",
-      "resee\n",
-      "5923.0\n",
-      "initial guess\n",
-      "1\n",
-      "2\n",
-      "from the results of the last guess\n",
-      "next best option is cloot\n",
-      "your top remaiing options are: \n",
-      "      guess  score_match  score_exact_match solution double  total_score\n",
-      "2111  cloot       3433.0              162.0      NaN   True       3595.0\n",
-      "7743  onion       3329.0              222.0     True   True       3551.0\n",
-      "8291  pitot       3250.0              228.0      NaN   True       3478.0\n",
-      "2\n"
+      "correct\n",
+      "correct\n",
+      "absent\n",
+      "correct\n",
+      "correct\n"
      ]
     }
    ],
+   "source": [
+    "df_results = next_guess(example_result_2, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>guess</th>\n",
+       "      <th>score_match</th>\n",
+       "      <th>score_exact_match</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>double</th>\n",
+       "      <th>total_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6289</th>\n",
+       "      <td>6289</td>\n",
+       "      <td>light</td>\n",
+       "      <td>2819.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2925.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0  guess  score_match  score_exact_match solution double  \\\n",
+       "6289        6289  light       2819.0              106.0     True    NaN   \n",
+       "\n",
+       "      total_score  \n",
+       "6289       2925.0  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'light'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_val_guess = (df_results['guess'][df_results['total_score'].idxmax()])\n",
+    "max_val_guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_val_guess = (df['guess'][df['total_score'].idxmax()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_ranks\n",
+    "\n",
+    "\n",
+    "for v in result:\n",
+    "    letter = v \n",
+    "    status = result[v][0]\n",
+    "    placement = result[v][1]\n",
+    "    if status == 'correct':\n",
+    "        print('correct')\n",
+    "        df = remove_by_contains(letter,df)\n",
+    "        df = remove_by_location(placement,letter,df)\n",
+    "    elif status == 'present':\n",
+    "        print('present')\n",
+    "        df = remove_by_contains(letter,df)\n",
+    "    elif status == 'absent':\n",
+    "        print('absent')\n",
+    "        df = remove_notcontains(letter,df)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# make the testing loop\n",
     "# starting DF df_word_ranks\n",
