--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -103,48 +103,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>edict</td>\n",
-       "      <td>e</td>\n",
-       "      <td>d</td>\n",
-       "      <td>i</td>\n",
+       "      <td>cheer</td>\n",
        "      <td>c</td>\n",
-       "      <td>t</td>\n",
+       "      <td>h</td>\n",
+       "      <td>e</td>\n",
+       "      <td>e</td>\n",
+       "      <td>r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>alive</td>\n",
-       "      <td>a</td>\n",
-       "      <td>l</td>\n",
-       "      <td>i</td>\n",
-       "      <td>v</td>\n",
+       "      <td>rebel</td>\n",
+       "      <td>r</td>\n",
        "      <td>e</td>\n",
+       "      <td>b</td>\n",
+       "      <td>e</td>\n",
+       "      <td>l</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>boson</td>\n",
-       "      <td>b</td>\n",
-       "      <td>o</td>\n",
+       "      <td>stack</td>\n",
        "      <td>s</td>\n",
-       "      <td>o</td>\n",
-       "      <td>n</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>c</td>\n",
+       "      <td>k</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>crony</td>\n",
-       "      <td>c</td>\n",
+       "      <td>verse</td>\n",
+       "      <td>v</td>\n",
+       "      <td>e</td>\n",
        "      <td>r</td>\n",
-       "      <td>o</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
+       "      <td>s</td>\n",
+       "      <td>e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>labia</td>\n",
+       "      <td>gnarl</td>\n",
+       "      <td>g</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>r</td>\n",
        "      <td>l</td>\n",
-       "      <td>a</td>\n",
-       "      <td>b</td>\n",
-       "      <td>i</td>\n",
-       "      <td>a</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -152,11 +152,11 @@
       ],
       "text/plain": [
        "   words first second third fourth fifth\n",
-       "0  edict     e      d     i      c     t\n",
-       "1  alive     a      l     i      v     e\n",
-       "2  boson     b      o     s      o     n\n",
-       "3  crony     c      r     o      n     y\n",
-       "4  labia     l      a     b      i     a"
+       "0  cheer     c      h     e      e     r\n",
+       "1  rebel     r      e     b      e     l\n",
+       "2  stack     s      t     a      c     k\n",
+       "3  verse     v      e     r      s     e\n",
+       "4  gnarl     g      n     a      r     l"
       ]
      },
      "execution_count": 6,
