--- a/data_analysis/check_all_solution_v_guesses.ipynb
+++ b/data_analysis/check_all_solution_v_guesses.ipynb
@@ -422,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aplhas = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
+    "alphas = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfalpha = pd.DataFrame(aplhas)\n",
+    "dfalpha = pd.DataFrame(alphas)\n",
     "dfalpha.columns = ['letters']\n",
     "dfalpha.set_index('letters', inplace=True)"
    ]
@@ -1665,79 +1665,6 @@
    "metadata": {},
    "source": [
     "<-- below this is the game aid loop -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "here is the game aid loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make the testing loop\n",
-    "# starting DF df_word_ranks\n",
-    "\n",
-    "round = 0\n",
-    "df_options = df_word_ranks\n",
-    "\n",
-    "print('strongest suggestions')\n",
-    "print(df_options.nlargest(3, 'value'))\n",
-    "go = 'go'\n",
-    "\n",
-    "while go != 'no':\n",
-    "    round += 1 \n",
-    "    if round == 1:\n",
-    "\n",
-    "        print('initial guess')\n",
-    "        word = input('enter your guess:')\n",
-    "        pass\n",
-    "\n",
-    "    if round > 1:\n",
-    "\n",
-    "        print(str(round))\n",
-    "\n",
-    "        not_char = input('enter eliminated letters:[l,e,t,t,e,r]')\n",
-    "        is_char = input('enter confirmed letters:[y,e,s]')\n",
-    "        loc_letters = input('enter confirmed locations: [letter,location]')\n",
-    "        dup_letters = input('enter known letter counts: [letter,count]')\n",
-    "\n",
-    "        # eliminate options, and show the reduced best 5 choices\n",
-    "        if len(not_char)>0:\n",
-    "            df_options = remove_notcontains(not_char,df_options)\n",
-    "\n",
-    "        if len(is_char)>0:\n",
-    "            df_options = remove_by_contains(is_char,df_options)\n",
-    "\n",
-    "        if len(loc_letters)>0:\n",
-    "            # remove by letters in correct location\n",
-    "            for i in range(0,int(len(loc_letters)),2):\n",
-    "                df_options = remove_by_location(loc=int(loc_letters[i+1]),letter=str(loc_letters[i]),df=df_options)\n",
-    "        \n",
-    "        if len(dup_letters)>0:\n",
-    "            # remove by letters in correct location\n",
-    "            for i in range(0,int(len(loc_letters)),2):\n",
-    "                df_options = remove_by_letter_count(loc=int(dup_letters[i+1]),letter=str(dup_letters[i]),df=df_options)\n",
-    "        \n",
-    "        try:\n",
-    "            next_best = (df_options['word'][df_options['value'].idxmax()])\n",
-    "            print('from the results of the last guess')\n",
-    "            print('next best option is ' + str(next_best))\n",
-    "            print('your top remaiing options are: ')\n",
-    "            print(df_options.nlargest(3, 'value'))\n",
-    "        except:\n",
-    "            print('e message')\n",
-    "            print(df_options.head())\n",
-    "            pass\n",
-    "    \n",
-    "        go = input('go again?:')\n",
-    "    # go = input('go again?:')\n",
-    "    print(str(round))\n"
    ]
   },
   {
