--- a/data_analysis/word_works.ipynb
+++ b/data_analysis/word_works.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aplhas = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
+    "alphas = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfalpha = pd.DataFrame(aplhas)\n",
+    "dfalpha = pd.DataFrame(alphas)\n",
     "dfalpha.columns = ['letters']\n",
     "dfalpha.set_index('letters', inplace=True)"
    ]
@@ -861,8 +861,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  this can be improved by confiming the number of letters in a word, 'wince' has one E and this was confirmed\n",
-    "# use this to elimate more from the pool when the information is availible"
+    "#  this can be improved by confirming the number of letters in a word, 'wince' has one E and this was confirmed\n",
+    "# use this to elimate more from the pool when the information is available"
    ]
   }
  ],
