--- a/data_analysis/large_sets_summary.ipynb
+++ b/data_analysis/large_sets_summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv = 'guess_value_iterations_guesses.csv'\n",
-    "doubles = 'double_letters.csv'\n",
-    "solutions = 'solutions.csv'"
+    "csv = 'datasets/guess_value_iterations_guesses.csv'\n",
+    "doubles = 'datasets/double_letters.csv'\n",
+    "solutions = 'datasets/solutions.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2116637/3291066838.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "/tmp/ipykernel_412636/3291066838.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  sums = df_guesses.groupby(['guess'])['score_match','score_exact_match'].sum().reset_index()\n"
      ]
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "514   arere       5243.0              408.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,28 +154,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_word_ranks = sums.merge(df_doubles,how='left',left_on='guess',right_on='guess')"
+    "df_word_ranks = sums.merge(df_doubles,how='left',left_on='guess',right_on='word')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   guess  score_match  score_exact_match solution  Unnamed: 0 double\n",
-      "0  aahed       3973.0              118.0      NaN       749.0   True\n",
-      "1  aalii       4019.0              269.0      NaN       750.0   True\n",
-      "2  aargh       3557.0               90.0      NaN       751.0   True\n",
-      "3  aarti       4257.0              140.0      NaN       752.0   True\n",
-      "4  abaca       3695.0              511.0      NaN       753.0   True\n",
+      "   guess  score_match  score_exact_match solution  Unnamed: 0   word double\n",
+      "0  aahed       3973.0              118.0      NaN       749.0  aahed   True\n",
+      "1  aalii       4019.0              269.0      NaN       750.0  aalii   True\n",
+      "2  aargh       3557.0               90.0      NaN       751.0  aargh   True\n",
+      "3  aarti       4257.0              140.0      NaN       752.0  aarti   True\n",
+      "4  abaca       3695.0              511.0      NaN       753.0  abaca   True\n",
       "12972\n"
      ]
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -219,6 +219,7 @@
        "      <th>score_exact_match</th>\n",
        "      <th>solution</th>\n",
        "      <th>Unnamed: 0</th>\n",
+       "      <th>word</th>\n",
        "      <th>double</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -230,6 +231,7 @@
        "      <td>419.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>955.0</td>\n",
+       "      <td>areae</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -239,6 +241,7 @@
        "      <td>413.0</td>\n",
        "      <td>True</td>\n",
        "      <td>191.0</td>\n",
+       "      <td>eerie</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -248,6 +251,7 @@
        "      <td>656.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3374.0</td>\n",
+       "      <td>resee</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -257,6 +261,7 @@
        "      <td>554.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3292.0</td>\n",
+       "      <td>raree</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -266,6 +271,7 @@
        "      <td>408.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>964.0</td>\n",
+       "      <td>arere</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -273,15 +279,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      guess  score_match  score_exact_match solution  Unnamed: 0 double\n",
-       "502   areae       5323.0              419.0      NaN       955.0   True\n",
-       "3301  eerie       5269.0              413.0     True       191.0   True\n",
-       "9113  resee       5267.0              656.0      NaN      3374.0   True\n",
-       "8908  raree       5243.0              554.0      NaN      3292.0   True\n",
-       "514   arere       5243.0              408.0      NaN       964.0   True"
+       "      guess  score_match  score_exact_match solution  Unnamed: 0   word double\n",
+       "502   areae       5323.0              419.0      NaN       955.0  areae   True\n",
+       "3301  eerie       5269.0              413.0     True       191.0  eerie   True\n",
+       "9113  resee       5267.0              656.0      NaN      3374.0  resee   True\n",
+       "8908  raree       5243.0              554.0      NaN      3292.0  raree   True\n",
+       "514   arere       5243.0              408.0      NaN       964.0  arere   True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2116637/2662046364.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_412636/2662046364.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +358,7 @@
        "      <th>score_exact_match</th>\n",
        "      <th>solution</th>\n",
        "      <th>Unnamed: 0</th>\n",
+       "      <th>word</th>\n",
        "      <th>double</th>\n",
        "      <th>total_score</th>\n",
        "    </tr>\n",
@@ -365,6 +372,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>4947.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -372,6 +380,7 @@
        "      <td>roate</td>\n",
        "      <td>4594.0</td>\n",
        "      <td>334.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -385,6 +394,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>4919.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -392,6 +402,7 @@
        "      <td>taler</td>\n",
        "      <td>4559.0</td>\n",
        "      <td>359.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -405,6 +416,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>4913.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -412,12 +424,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       guess  score_match  score_exact_match solution  Unnamed: 0 double  \\\n",
-       "10364  soare       4534.0              413.0      NaN         NaN    NaN   \n",
-       "9247   roate       4594.0              334.0      NaN         NaN    NaN   \n",
-       "7628   oater       4594.0              325.0      NaN         NaN    NaN   \n",
-       "11067  taler       4559.0              359.0      NaN         NaN    NaN   \n",
-       "7778   orate       4594.0              319.0      NaN         NaN    NaN   \n",
+       "       guess  score_match  score_exact_match solution  Unnamed: 0 word double  \\\n",
+       "10364  soare       4534.0              413.0      NaN         NaN  NaN    NaN   \n",
+       "9247   roate       4594.0              334.0      NaN         NaN  NaN    NaN   \n",
+       "7628   oater       4594.0              325.0      NaN         NaN  NaN    NaN   \n",
+       "11067  taler       4559.0              359.0      NaN         NaN  NaN    NaN   \n",
+       "7778   orate       4594.0              319.0      NaN         NaN  NaN    NaN   \n",
        "\n",
        "       total_score  \n",
        "10364       4947.0  \n",
@@ -427,7 +439,7 @@
        "7778        4913.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,19 +450,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    guess  score_match  score_exact_match solution  Unnamed: 0 double  \\\n",
-      "26  abers       4061.0              133.0      NaN         NaN    NaN   \n",
-      "27  abets       3891.0              125.0      NaN         NaN    NaN   \n",
-      "28  abhor       3302.0              101.0     True         NaN    NaN   \n",
-      "29  abide       3557.0              215.0     True         NaN    NaN   \n",
-      "30  abies       3833.0              159.0      NaN         NaN    NaN   \n",
+      "    guess  score_match  score_exact_match solution  Unnamed: 0 word double  \\\n",
+      "26  abers       4061.0              133.0      NaN         NaN  NaN    NaN   \n",
+      "27  abets       3891.0              125.0      NaN         NaN  NaN    NaN   \n",
+      "28  abhor       3302.0              101.0     True         NaN  NaN    NaN   \n",
+      "29  abide       3557.0              215.0     True         NaN  NaN    NaN   \n",
+      "30  abies       3833.0              159.0      NaN         NaN  NaN    NaN   \n",
       "\n",
       "    total_score  \n",
       "26       4194.0  \n",
@@ -467,7 +479,7 @@
     "index = rank_no_doubles.index\n",
     "number_of_rows = len(index)\n",
     "print(number_of_rows)\n",
-    "rank_no_doubles.to_csv('large_rank_no_doubles')"
+    "rank_no_doubles.to_csv('datasets/large_rank_no_doubles')"
    ]
   },
   {
