--- a/notebook_scratchpads/bot_set.ipynb
+++ b/notebook_scratchpads/bot_set.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "# from english_words import english_words_set\\\n",
-    "# import multiprocessing as mp\n",
-    "# import warnings\n",
-    "import pandas as pd\n",
-    "# import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
@@ -27,7 +24,7 @@
     }
    ],
    "source": [
-    "f = open('data/guesses.txt','r')\n",
+    "f = open('datasets/guesses.txt','r')\n",
     "guesses = []\n",
     "\n",
     "for line in f:\n",
@@ -85,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "value_set = pd.read_csv('data/rank_set.csv')"
+    "value_set = pd.read_csv('datasets/rank_set.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +195,7 @@
        "4       4206.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
