--- a/notebook_scratchpads/word_works.ipynb
+++ b/notebook_scratchpads/word_works.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make a list of 5 lenght words without non-alphas, and no proper nouns\n",
+    "# make a list of 5 length words without non-alphas, and no proper nouns\n",
     "words5 = []\n",
     "\n",
     "for word in english_words_set:\n",
